# Hunyuan3D-Swift

./: .gitignore  Package.resolved  Package.swift  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
python/paint/: README.md  pyproject.toml
python/paint/hy3dpaint_mlx/: __init__.py  attention.py  attention_pbr.py  convert.py  dinov2.py  layers2d.py  mesh_render.py  realesrgan.py  scheduler.py  unet.py  unet2p5d.py  unet2p5d_pbr.py  vae.py
python/paint/metadata/: MANIFEST.md
python/paint/oracle/: attn_oracle.py  dino_oracle.py  layers_oracle.py  realesrgan_oracle.py  render_oracle.py  rope_oracle.py  unet2p5d_oracle.py  unet2p5d_pbr_oracle.py  unet_oracle.py  unet_trace_oracle.py  unipc_oracle.py  vae_oracle.py
python/paint/research/: 01-model-family.md  02-paint-architecture.md  03-shape-paint-interop.md  04-mlx-port-plan.md
python/paint/scripts/: convert_weights.py  run_paint.py  run_paint_pbr.py
python/paint/tests/: test_attn_parity.py  test_layers2d_parity.py  test_pbr_parity.py  test_raster_gpu_parity.py  test_raster_parity.py  test_realesrgan_parity.py  test_render_parity.py  test_unet_parity.py  test_unipc_parity.py  test_vae_parity.py
python/shape/: BENCHMARKS.md  PLAN.md  README.md  VERIFICATION.md  pyproject.toml
python/shape/hy3dmlx/: __init__.py  convert.py  layers.py  pipeline.py  preprocess.py  sampler.py
python/shape/scripts/: bench_grid.py  bench_stages.py  convert_v21_ckpt.py  dl_any.py  dl_modelscope.py  dump_dit_fixture.py  dump_swift_fixtures.py  generate_mc_tables.py  measure_mlx.py  measure_mps.py  mlx_compare.py  mlx_compare_v21.py  (+8 more)
(+86 files in other folders)
