[project]
name = "hy3dpaint-mlx"
version = "0.0.1"
description = "Fully MLX-native, parity-first Hunyuan3D texture/paint for Apple Silicon"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "mlx",
    "pillow",
    "trimesh",
    "xatlas>=0.0.11",
    "scipy>=1.17.1",
    "opencv-python-headless>=4.13.0.92",
]

[dependency-groups]
dev = [
    "pytest",
    "pybind11",
]

# Torch is dev-time ONLY — the parity oracle. Never imported in the MLX inference path.
oracle = [
    "torch",
    "diffusers",
    "transformers",
    "safetensors",
]

[tool.uv]
package = false
